--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Resume - Sathish Kumar A</title>
+    <link rel="stylesheet" href="Style.css">
     <style>
         body { font-family: Arial, sans-serif; margin: 40px; }
         h1, h2 { color: #333; }
