--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
 
     <h1>Sathish Kumar A</h1>
-    <p><strong>IT Experience:</strong> 5.8 years in BFSI Domain & Mainframe Technology</p>
+    <p><strong>IT Experience:</strong></p>
+    <p> 5.8 years in BFSI Domain</p>
     <p><strong>Email:</strong> sathishk79261@gmail.com</p>
     <p><strong>Mobile:</strong> +91 7401566185</p>
 
